feat: support code analysis run cleanup and tighten assessment (#198)
Reviewed-on: https://git.baer.one/phbaer/dtvp/pulls/198
